# mqttwidget

./: .gitignore  CMakeLists.txt  README.md
package/: metadata.json
package/contents/config/: config.qml  main.xml
package/contents/ui/: config_server.qml  main.qml
plugin/: CMakeLists.txt  Cargo.toml  qmldir
plugin/src/: lib.rs  mqttconnection.rs  mqttplugin.rs
